[package]
name = "pxid"
version = "0.3.0"
edition = "2021"
description = "Prefixed Globally Unique Identifier"
repository = "https://github.com/whizzes/pxid"
categories = ["web-programming"]
homepage = "https://github.com/whizzes/pxid"
keywords = ["network", "id", "generator", "uid"]
license = "MIT"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.1", optional = true }
crc32fast = "1.3.2"
md5 = "0.7.0"
rand = "0.8.5"
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0.152"

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = "0.5.4"

[features]
async-graphql = ["dep:async-graphql", "dep:serde"]
serde = ["dep:serde"]
