[package]
name = "pxid"
version = "1.0.0"
edition = "2021"
description = "Prefixed Globally Unique Identifier"
repository = "https://github.com/whizzes/pxid"
categories = ["web-programming"]
homepage = "https://github.com/whizzes/pxid"
keywords = ["network", "id", "generator", "uid"]
license = "MIT"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.0", optional = true }
crc32fast = "1.3.2"
md5 = "0.7.0"
rand = "0.8.5"
thiserror = "1.0.52"
serde = { version = "1.0.193", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0.176"
serde_json = "1.0.68"

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = "0.5.5"

[features]
async-graphql = ["dep:async-graphql", "dep:serde"]
serde = ["dep:serde"]
